--- a/JS-Applications/Routing/hash/index.html
+++ b/JS-Applications/Routing/hash/index.html
@@ -9,6 +9,11 @@
 <body>
 
     <h1> Welcome to Hash demo</h1>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#home">Catalog</a>
+        <a href="#about">About</a>
+    </nav>
 
     <main>
 
@@ -22,10 +27,11 @@
             '#catalog': '<h2>Catalog</h2><p>List of acticles</p>',
             '#about': '<h2>About Us</h2><p>Contact information</p>'
         }
+        const defaultPage = '<h2>404</h2><p>Page Not Found</p>';
 
         const main = document.querySelector('main');
         const currentHash = window.location.hash;
-        main.innerHTML = '<p>Heloow world</p>'
+        main.innerHTML = pages[currentHash] || defaultPage;
 
     </script>
     
