--- a/JS-Applications/ModularApplications/Exercise/01.Team-Manager/index.html
+++ b/JS-Applications/ModularApplications/Exercise/01.Team-Manager/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/site.css">
-    <link rel="stylesheet" href="./static/layout.css">
-    <link rel="stylesheet" href="./static/modal.css">
+    <link rel="stylesheet" href="/static/site.css">
+    <link rel="stylesheet" href="/static/layout.css">
+    <link rel="stylesheet" href="/static/modal.css">
     <title>Team Manager</title>
+    <script src="/src/app.js" type="module"></script>
 </head>
 
 <body>
@@ -27,7 +28,7 @@
 
             <section id="home">
                 <article class="hero layout">
-                    <img src="./assets/team.png" class="left-col pad-med">
+                    <img src="/assets/team.png" class="left-col pad-med">
                     <div class="pad-med tm-hero-col">
                         <h2>Welcome to Team Manager!</h2>
                         <p>Want to organize your peers? Create and manage a team for free.</p>
